--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div id="content">
 		<h1>Bookchain coming soon...</h1>
-		<p><a href="escrow.html">Escrow service</a></p>
+		<p><a href="escrow.html">Our escrow service</a></p>
 	</div>
 </body>
 </html>
