--- a/escrow.html
+++ b/escrow.html
@@ -5,7 +5,7 @@
 	<meta name=viewport content="width=device-width,initial-scale=1">
 	<title>Отправка GOLOS/GBG (с гарантом)</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="l10n/default.js?1" type="text/javascript"></script>
+	<script src="l10n/escrow/default.js?1" type="text/javascript"></script>
 	<script src="js/main.js?25" type="text/javascript"></script>
 	<script src="js/steem.js?2"></script>
 	<link rel="stylesheet" href="css/main.css?11">
